# localpaste.rs

./: .env  .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  test-frontend.js  test-functionality.sh  test-modules.sh
.cargo/: config.toml.example
.github/scripts/: normalize_packaging_tag.py  normalize_release_tag.sh  release_gui_collect.py  release_gui_prepare.py  release_versioning.py  test_release_gui_versioning.py  validate_workflow.py  workspace_version.sh
.github/workflows/: release-gui.yml  verify-gui-packaging.yml  workflow-lint.yml
crates/localpaste_cli/: Cargo.toml
crates/localpaste_cli/src/: main.rs  tests.rs
crates/localpaste_core/: Cargo.toml
crates/localpaste_core/src/: config.rs  constants.rs  diff.rs  env.rs  error.rs  folder_ops.rs  lib.rs  semantic.rs  test_support.rs  text.rs
crates/localpaste_core/src/db/: backup.rs  folder.rs  fs_copy.rs  lock.rs  mod.rs  paste.rs  tables.rs  tests.rs  time_util.rs  transactions.rs  versioning.rs
crates/localpaste_core/src/db/paste/: compare.rs  helpers.rs  mod.rs  state.rs  tests.rs
crates/localpaste_core/src/db/tests/: basic_ops.rs  concurrency.rs  folder_transactions.rs  mod.rs  search_and_meta.rs  startup_reconcile.rs
crates/localpaste_core/src/detection/: canonical.rs  heuristic.rs  magika.rs  mod.rs  tests.rs
crates/localpaste_core/src/models/: folder.rs  mod.rs  paste.rs  tests.rs
crates/localpaste_core/src/naming/: mod.rs
crates/localpaste_gui/: Cargo.toml  build.rs
crates/localpaste_gui/src/: app.rs  lib.rs  lock_owner.rs  main.rs
crates/localpaste_gui/src/app/: editor.rs  highlight.rs  highlight_flow.rs  interaction_helpers.rs  mod.rs  paste_intent.rs  perf_trace.rs  shutdown.rs  state_accessors.rs  state_cache.rs  state_feedback.rs  state_ops.rs  style.rs  text_coords.rs  util.rs  version_ui.rs  virtual_ops.rs  virtual_ops_apply.rs  virtual_ops_click.rs  virtual_view.rs  window_bounds.rs
crates/localpaste_gui/src/app/highlight/: mod.rs  reuse.rs  syntax.rs  tests.rs  worker.rs
crates/localpaste_gui/src/app/state_ops/: filters.rs
crates/localpaste_gui/src/app/tests/: collections_and_search.rs  creation_and_projection.rs  focus_and_paste_routing.rs  highlight_behaviors.rs  keyboard_navigation_audit.rs  mod.rs  save_and_metadata.rs  shutdown_behavior.rs  state_basics.rs  version_async_status.rs  version_modal_caching.rs  version_overlay_exclusivity.rs  virtual_editor_behaviors.rs  virtual_editor_ime_regressions.rs
crates/localpaste_gui/src/app/ui/: command_palette.rs  diff_modal.rs  editor_panel.rs  editor_panel_virtual.rs  history_modal.rs  mod.rs  properties_drawer.rs  shortcut_help.rs  sidebar.rs  status_bar.rs  toasts.rs
crates/localpaste_gui/src/app/virtual_editor/: buffer.rs  galley_cache.rs  history.rs  input.rs  input_tests.rs  layout.rs  mod.rs  state.rs  visual_rows.rs  visual_rows_tests.rs
crates/localpaste_gui/src/backend/: mod.rs  protocol.rs  worker.rs
crates/localpaste_gui/src/backend/worker/: folder.rs  paste.rs  query.rs
crates/localpaste_gui/tests/: headless_workflows.rs
crates/localpaste_native/: Cargo.toml
crates/localpaste_native/src/: app.rs  lib.rs  main.rs
crates/localpaste_native/src/backend/: mod.rs  protocol.rs  worker.rs
crates/localpaste_server/: Cargo.toml
crates/localpaste_server/src/: embedded.rs  error.rs  lib.rs  locks.rs  main.rs
crates/localpaste_server/src/handlers/: deprecation.rs  folder.rs  mod.rs  normalize.rs  paste.rs
crates/localpaste_server/tests/: api_compare.rs  api_integration.rs  manual_language_create.rs  version_history_api.rs
crates/localpaste_server/tests/support/: mod.rs
crates/localpaste_tools/: Cargo.toml
crates/localpaste_tools/src/: main.rs
docs/: README.md  architecture.md  cli-gui-workflows.md  deployment.md  dev.md  gui-notes.md  language-detection.md  parity-checklist.md  perf-baseline.md  refactoring-guide.md  release-gui.md  security.md  storage.md  test-suite.sh  ui-palette.md  virtual-editor-plan.md
docs/dev/: README.md  backlog.md  devlog.md  folder-audit-matrix-2026-02-13.md  folder-audit-report-2026-02-13.md  gui-notes.md  gui-perf-protocol.md  invariant-audit-matrix.md  invariant-audit-report-2026-02-13.md  loc-exceptions.toml  locking-model.md  parity-checklist.md  perf-baseline.md  storage-split-plan.md  ui-palette.md  virtual-editor-plan.md
legacy/gui/: mod.rs
packaging/linux/: packager.json
packaging/macos/: packager.json
packaging/windows/: packager.json
src/: config.rs  error.rs  lib.rs  locks.rs  main.rs
src/db/: backup.rs  folder.rs  lock.rs  mod.rs  paste.rs  tests.rs  transactions.rs
src/gui/: mod.rs
src/handlers/: folder.rs  mod.rs  paste.rs  websocket.rs
src/models/: folder.rs  mod.rs  paste.rs  tests.rs
src/naming/: mod.rs
src/static/: index-modular.html  index.html  index.html.backup  index_modular.html  index_old.html  module-test.html
src/static/css/: style.css
src/static/js/: LocalPaste.js  LocalPasteClass.js  app.js  main.js
src/static/js/api/: client.js
src/static/js/components/: App.js  Editor.js  Sidebar.js  TreeView.js  paste-list.js
src/static/js/editor/: editor.js
src/static/js/state/: store.js
src/static/js/syntax/: highlighter.js  language-patterns.js  languages.js  worker-highlighter.js
src/static/js/utils/: common.js  debounce.js  dom-helpers.js  dom.js  error-boundary.js  error-handler.js  errors.js  logger.js  status.js  virtual-scroll.js
src/static/js/workers/: highlight-worker.js
tests/: api_integration.rs
