[workspace]
members = [
    "crates/localpaste_core",
    "crates/localpaste_server",
    "crates/localpaste_gui",
    "crates/localpaste_cli",
    "crates/localpaste_tools",
]
resolver = "2"

[profile.dev]
codegen-units = 16
incremental = true

[profile.test]
codegen-units = 16

[profile.release]
opt-level = "z"
lto = true
codegen-units = 12
strip = true
panic = "abort"
