[workspace]
members = [
    "crates/localpaste_core",
    "crates/localpaste_server",
    "crates/localpaste_gui",
    "crates/localpaste_cli",
    "crates/localpaste_tools",
]
default-members = ["crates/localpaste_gui"]
resolver = "2"

[profile.dev]
codegen-units = 8
incremental = true

[profile.test]
codegen-units = 8

[profile.release]
opt-level = "z"
lto = true
codegen-units = 8
strip = true
panic = "abort"
