[package]
name = "localpaste_cli"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "lpaste"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
