[package]
name = "localpaste_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lpaste"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = "4.5"
localpaste_core = { path = "../localpaste_core" }
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
