[package]
name = "localpaste_core"
version = "0.3.1"
edition = "2021"

[lib]
name = "localpaste_core"
path = "src/lib.rs"

[dependencies]
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
