[package]
name = "localpaste_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "localpaste_core"
path = "src/lib.rs"

[dependencies]
redb = { version = "3", features = ["uuid"] }
serde = { workspace = true, features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
rand.workspace = true
thiserror = "1.0"
tracing.workspace = true
fs2 = "0.4"

[dev-dependencies]
tempfile.workspace = true
