[package]
name = "localpaste_gui"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "localpaste-gui"
path = "src/main.rs"

[dependencies]
localpaste_core = { path = "../localpaste_core" }
localpaste_server = { path = "../localpaste_server" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
crossbeam-channel = "0.5"
eframe = { version = "0.33", features = ["wgpu", "persistence"] }
egui_extras = { version = "0.33", features = ["syntect"] }
syntect = "5.3"
ropey = "1.6"
unicode-segmentation = "1.11"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"
puffin = { version = "0.19", optional = true }

[features]
default = []
debug-tools = []
profile = ["puffin"]

[dev-dependencies]
tempfile = "3.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
