[package]
name = "localpaste_native"
version = "0.3.1"
edition = "2021"

[dependencies]
localpaste_core = { path = "../localpaste_core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
crossbeam-channel = "0.5"
eframe = { version = "0.33", features = ["wgpu", "persistence"] }

[dev-dependencies]
tempfile = "3.8"
