[package]
name = "localpaste_server"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "localpaste"
path = "src/main.rs"

[dependencies]
localpaste_core = { path = "../localpaste_core" }
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "tracing"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = [
    "cors",
    "compression-gzip",
    "trace",
    "set-header",
] }
tokio = { version = "1.40", features = ["full"] }
hyper = { version = "1.4", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
