[package]
name = "localpaste_tools"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "generate-test-data"
path = "src/main.rs"

[[bin]]
name = "check-loc"
path = "src/bin/check-loc.rs"

[dependencies]
localpaste_core = { path = "../localpaste_core" }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
tempfile = "3.21"
